objects/RTAT_Mfg_Line_Code__c.object
<CustomObject>
    <description>CREATE TABLE &quot;PINPOINT&quot;.&quot;MANUFACTURING_LINE_CODES&quot; (
		&quot;LINE_CODE&quot; VARCHAR(20) NOT NULL,
		&quot;MULTI_PART_NUMBER_BUILD&quot; VARCHAR(3) NOT NULL,
		&quot;QUALITY&quot; VARCHAR(20) NOT NULL,
		&quot;TECHNOLOGY_NAME&quot; VARCHAR(50) NOT NULL,
		&quot;LOCATION_NAME&quot; VARCHAR(20) NOT NULL,
		&quot;LAST_UPDATE_USER&quot; VARCHAR(80),
		&quot;LAST_UPDATE_TIME&quot; TIMESTAMP DEFAULT CURRENT TIMESTAMP
	)
	DATA CAPTURE NONE;</description>
    <fields>
        <fullName>Line_Code__c</fullName>
        <description>Line codes</description>
        <inlineHelpText>valid line codes for each fab</inlineHelpText>
        <label>Line Code</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Part_Number_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Building with multiple part numbers on the wafer?</description>
        <inlineHelpText>If this is a MPW build, check means yes/true</inlineHelpText>
        <label>Multi Part Number Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <description>Quality is P or PQ</description>
        <label>Quality</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PQ</fullName>
                    <default>true</default>
                    <label>PQ</label>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Technology</valueSetName>
        </valueSet>
    </fields>
    <label>RTAT Mfg Line Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Location_Name__c</columns>
        <columns>Technology__c</columns>
        <columns>Quality__c</columns>
        <columns>Multi_Part_Number_Build__c</columns>
        <columns>Line_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technology__c</field>
            <operation>equals</operation>
            <value>SIGE8WL</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MLC-{0000}</displayFormat>
        <label>Manufacturing Line Code Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTAT Mfg Line Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>